samples/_failures_safe/1761537602_35ae72_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_709f1cc6.c: In function ‘main’:
./samples/SAFE/__tmp_709f1cc6.c:118:29: error: expected ‘)’ at end of input
  118 |     if (scanf("%d %d", &mat2
      |              ~              ^
      |                             )
./samples/SAFE/__tmp_709f1cc6.c:118:5: error: expected declaration or statement at end of input
  118 |     if (scanf("%d %d", &mat2
      |     ^~
